
*Topbeat*

*Filebeat*

- Stop following symlink. Symlinks are now ignored: {pull}1686[1686]

*Winlogbeat*


==== Bugfixes

*Affecting all Beats*
- Fix sync publisher PublishEvents return value if client is closed concurrently. {pull}2046[2046]

*Metricbeat*

- Do not send zero values when no value was present in the source. {issue}1972[1972]

*Packetbeat*

*Topbeat*

*Filebeat*
- Fix potential data loss between filebeat restarts, reporting unpublished lines as published. {issue}2041[2041]

- Fix open file handler issue {issue}2028[2028] {pull}2020[2020]

*Winlogbeat*
- Fix potential data loss between winlogbeat restarts, reporting unpublished lines as published. {issue}2041[2041]

==== Added

*Affecting all Beats*

- Periodically log internal metrics. {pull}1955[1955]
- Add enabled setting to all output modules. {pull}1987[1987]
- Command line flag -c can be used multiple times. {pull}1985[1985]
- Add OR/AND/NOT to the condition associated with the processors. {pull}1983[1983]
- Add '-E' CLI flag for overwriting single config options via command line. {pull}1986[1986]
- Choose the mapping template file based on the Elasticsearch version. {pull}1993[1993]
- Check stdout being available when console output is configured. {issue}2035[2035]
- Add enabled setting to packetbeat protocols. {pull}1988[1988]
- Add enabled setting to packetbeat network flows configuration. {pull}1988[1988]

*Metricbeat*
- Add pgid field to process information. {pull} 2021[2021]

*Packetbeat*

*Topbeat*

*Filebeat*
- Introduce close_removed and close_renamed harvester options {issue}1600[1600]
- Introduce close_eof harvester option {issue}1600[1600]
- Add clean_removed config option {issue}1600[1600]

*Winlogbeat*


==== Deprecated

*Affecting all Beats*

*Packetbeat*

*Topbeat*

*Filebeat*
- Deprecate close_older option and replace it with close_inactive {issue}2051[2051]
- Deprecate force_close_files option and replace it with close_removed and close_renamed {issue}1600[1600]

